--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ img {
 
 /* || GENERAL STYLES */
 body {
+    height: 100%;
+}
+
+.inner-body {
     font-family: var(--font-family-sans-serif);
     font-size: var(--font-size-sm);
     font-weight: var(--font-weight-reg);
@@ -49,7 +53,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    min-height: 100vh;
+    height: 100vh; 
 }
 
 body div {
@@ -111,6 +115,18 @@ body div {
 
 .winner-declaration {
     text-align: center;
+    height: 45px;
+}
+
+.reset-container {
+    text-align: center;
+    position: absolute;
+    bottom: 3.5rem;
+}
+
+.reset-container .reset {
+    border: none;
+    padding: 0.5rem 3rem;
 }
 
 .scores {
@@ -129,14 +145,14 @@ body div {
 @media screen and (width > 768px) {
     html {
         background-image: linear-gradient(to right, var(--bgcolor--light-gold) 30%, var(--bgcolor--dark-gold) 70%);
-        min-height: 100vh;
+        max-height: 100vh;
     }
 
-    body {
+    .inner-body {
         max-width: 60%;
         margin: 25px auto;
         border-radius: 10px;
-        min-height: calc(100vh - 50px);
+        max-height: calc(100vh - 50px);
     }
 
     .header {
